2003-10-03  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/wincrypt.h (SCHANNEL_MAC_KEY, SCHANNEL_ENC_KEY,
	INTERNATIONAL_USAGE, KP_SCHANNEL_ALG): Add constants. Specifying
	the algorithms.

2003-10-03  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/wincrypt.h (CRYPT_FLAGS_*): Add constants. Protocol flags.

2003-10-03  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/wincrypt.h (KP_*): Add constants. Needed by
	CryptSetKeyParam() and other functions.

2003-10-03  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h [_WIN32_WINNT >= 0x0501] (EVENT_*, CONSOLE_*):
	Add constants, related to Console Accessibility.

2003-10-03  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h [WINVER >= 0x0500] (EVENT_MAX): Ooops...
	wrong value for constant.

2003-10-03  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h [WINVER >= 0x0500] (EVENT_*): Add constants.

	* include/uxtheme.h: Cleanup.
	* include/tmschema.h: Cleanup.

2003-10-02  Luke Dunstan  <infidel@users.sourceforge.net>

	* include/winspool.h (GetDefaultPrinter[AW]): Add functions.
	* lib/winspool.def (GetDefaultPrinter[AW]): Add stubs.

2003-10-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (INVALID_FILE_ATTRIBUTES): Fix define.

2003-09-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (BSF_*, BSM_*):  Sync constants defined in
	both winuser.h and dbt.h.
	* include/dbt.h (BSF_*, BSM_*): Likewise.

	* include/winuser.h (struct tagRAWINPUT): Remove
	_ANONYMOUS_UNION tag from named union.
	(struct tagRAWMOUSE): Add _ANONYMOUS_STRUCT to nameless struct.

2003-09-30  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/dhcpcdsk.h: New file.
	Note that MSDN is confused about whether it should start constant
	and structure names with DHCPCAPI or DHCPAPI. It's using both but
	experience suggests it's DHCPCAPI with `C'.
