@@ -529,6 +529,7 @@ typedef DWORD FLONG;
 #define LANG_HINDI	0x39
 #define LANG_MALAY	0x3e
 #define LANG_KAZAK	0x3f
+#define LANG_KYRGYZ	0x40
 #define LANG_SWAHILI	0x41
 #define LANG_UZBEK	0x43
 #define LANG_TATAR	0x44
@@ -543,11 +544,16 @@ typedef DWORD FLONG;
 #define LANG_ASSAMESE	0x4d
 #define LANG_MARATHI	0x4e
 #define LANG_SANSKRIT	0x4f
+#define LANG_MONGOLIAN	0x50
+#define LANG_GALICIAN	0x56
 #define LANG_KONKANI	0x57
 #define LANG_MANIPURI	0x58
 #define LANG_SINDHI	0x59
+#define LANG_SYRIAC	0x5a
 #define LANG_KASHMIRI	0x60
 #define LANG_NEPALI	0x61
+#define LANG_DIVEHI	0x65
+#define LANG_INVARIANT	0x7f
 #define SUBLANG_NEUTRAL	0x00
 #define SUBLANG_DEFAULT	0x01
 #define SUBLANG_SYS_DEFAULT	0x02
@@ -567,8 +573,8 @@ typedef DWORD FLONG;
 #define SUBLANG_ARABIC_UAE	0x0e
 #define SUBLANG_ARABIC_BAHRAIN	0x0f
 #define SUBLANG_ARABIC_QATAR	0x10
-#define SUBLANG_AZERI_CYRILLIC	0x01
-#define SUBLANG_AZERI_LATIN	0x02
+#define SUBLANG_AZERI_LATIN	0x01
+#define SUBLANG_AZERI_CYRILLIC	0x02
 #define SUBLANG_CHINESE_TRADITIONAL	0x01
 #define SUBLANG_CHINESE_SIMPLIFIED	0x02
 #define SUBLANG_CHINESE_HONGKONG	0x03
@@ -587,8 +593,8 @@ typedef DWORD FLONG;
 #define SUBLANG_ENGLISH_CARIBBEAN	0x09
 #define SUBLANG_ENGLISH_BELIZE	0x0a
 #define SUBLANG_ENGLISH_TRINIDAD	0x0b
-#define SUBLANG_ENGLISH_PHILIPPINES	0x0c
-#define SUBLANG_ENGLISH_ZIMBABWE	0x0d
+#define SUBLANG_ENGLISH_ZIMBABWE	0x0c
+#define SUBLANG_ENGLISH_PHILIPPINES	0x0d
 #define SUBLANG_FRENCH	0x01
 #define SUBLANG_FRENCH_BELGIAN	0x02
 #define SUBLANG_FRENCH_CANADIAN	0x03
@@ -603,6 +609,7 @@ typedef DWORD FLONG;
 #define SUBLANG_ITALIAN	0x01
 #define SUBLANG_ITALIAN_SWISS	0x02
 #define SUBLANG_KASHMIRI_INDIA	0x02
+#define SUBLANG_KASHMIRI_SASIA	0x02
 #define SUBLANG_KOREAN	0x01
 #define SUBLANG_LITHUANIAN	0x01
 #define SUBLANG_MALAY_MALAYSIA	0x01
